# Flower_Task

./: LICENSE  README.md  pyproject.toml
outputs/2024-01-11/14-32-50/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2024-01-11/14-38-50/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2024-01-11/14-45-20/.hydra/: config.yaml  hydra.yaml  overrides.yaml
task/: client.py  dataset.py  dataset_preparation.py  main.py  models.py  run.sh  server.py  strategy.py  utils.py
task/conf/: task.yaml
