[tool.poetry]
name = "flower-task"
version = "0.1.0"
description = "Task from Flower Labs."
authors = ["WilliamLindskog <williamlindskog@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flower_task"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
hydra-core = "^1.3.2"
torch = "^2.1.2"
torchvision = "^0.16.2"
matplotlib = "^3.8.2"
flwr = "^1.6.0"
flwr-datasets = {extras = ["vision"], version = "^0.0.2"}
omegaconf = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
